--- a/my-bibliography.bib
+++ b/my-bibliography.bib
@@ -1,33 +1,68 @@
-@article{article,
+@article{paper1_ordered_list,
     author = {Bender, Michael and Cole, Richard and Zito, Jack},
     year = {2004},
     month = {07},
     pages = {},
     title = {Two Simplified Algorithms for Maintaining Order in a List},
+    url = {\url{https://www.researchgate.net/publication/2865732_Two_Simplified_Algorithms_for_Maintaining_Order_in_a_List}},
     volume = {2461}
 }
 
-@inproceedings{inproceedings,
+@inproceedings{paper2_file_maintenance,
     author = {Bender, Michael and Fineman, Jeremy and Gilbert, Seth and Kopelowitz, Tsvi and Montes, Pablo},
     year = {2017},
     month = {01},
     pages = {1503-1522},
     title = {File Maintenance: When in Doubt, Change the Layout!},
-    doi = {10.1137/1.9781611974782.98}
+    url = {\url{https://www.researchgate.net/publication/312077958_File_Maintenance_When_in_Doubt_Change_the_Layout}},
+    doi = {10.1137/1.9781611974782.98},
 }
 
-@misc{ enwiki:1107672779,
-    author = "{Wikipedia contributors}",
-    title = "Order-maintenance problem --- {Wikipedia}{,} The Free Encyclopedia",
-    year = "2022",
-    url = "https://en.wikipedia.org/w/index.php?title=Order-maintenance_problem&oldid=1107672779",
-    note = "[Online; accessed 16-October-2022]"
+@misc{ wiki_order-maintenance_problem,
+    author = {Wikipedia contributors},
+    title = {Order-maintenance problem --- {Wikipedia}{,} The Free Encyclopedia},
+    year = {2022},
+    howpublished = {\url{https://en.wikipedia.org/w/index.php?title=Order-maintenance_problem&oldid=1107672779}},
+    note = {[Online; accessed 16-October-2022]},
   }
   
-@misc{ enwiki:1087156667,
-    author = "{Wikipedia contributors}",
-    title = "List-labeling problem --- {Wikipedia}{,} The Free Encyclopedia",
-    year = "2022",
-    url = "https://en.wikipedia.org/w/index.php?title=List-labeling_problem&oldid=1087156667",
-    note = "[Online; accessed 16-October-2022]"
+@misc{ wiki_list-labeling,
+    author = {Wikipedia contributors},
+    title = {List-labeling problem --- {Wikipedia}{,} The Free Encyclopedia},
+    year = {2022},
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=List-labeling_problem&oldid=1087156667}",
+    note = {[Online; accessed 16-October-2022]},
   }
+ 
+ @misc{lecture8_video,
+    author = {Demaine, Eric},
+    title = {Lecture 8: Ordered Files & Cache-Oblivious Priority Queues},
+    institution = "Computer Science & Artificial Intelligence Laboratory, Massachusetts Institute of Technology",
+    series = "6.851 Advanced Data Structures",
+    year = 2012,
+    month = {03},
+    howpublished = "\url{http://courses.csail.mit.edu/6.851/spring12/lectures/L08.html?notes=3}",
+    note = {[Video lecture; accessed 16-October-2022]},
+ }
+ 
+ @misc{lecture8_notes,
+    author = {Demaine, Eric and Razavi, Pedram and Georgiou, Thomas and Morgan, Tom},
+    title = {Lecture 8 --- 13 March, 2012},
+    institution = {Computer Science & Artificial Intelligence Laboratory, Massachusetts Institute of Technology},
+    series = {6.851 Advanced Data Structures},
+    year = {2012},
+    month = {03},
+    howpublished = {\url{http://courses.csail.mit.edu/6.851/spring12/scribe/lec8.pdf}},
+    note = {[Scribe notes from lecture; accessed 16-October-2022]},
+ }
+ 
+  @misc{lecture20_notes,
+    author = {Demaine, Eric and Bryant, Robert},
+    title = {Lecture 20 --- Apr 30, 2007},
+    institution = {Computer Science & Artificial Intelligence Laboratory, Massachusetts Institute of Technology},
+    series = {6.851 Advanced Data Structures},
+    year = {2007},
+    month = {04},
+    howpublished = {\url{http://courses.csail.mit.edu/6.851/spring07/scribe/lec20.pdf}},
+    note = {[Scribe notes from lecture; accessed 16-October-2022]},
+ }
